prevent body overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import "./styles/styles";
 
 * {
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -13,4 +13,5 @@ body {
   background-color: $poke_dark_color;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
